--- a/app/src/main/res/layout/public_title_bar.xml
+++ b/app/src/main/res/layout/public_title_bar.xml
@@ -34,6 +34,7 @@
             android:textSize="18sp" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_right"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
