--- a/app/src/main/res/layout/fc_business.xml
+++ b/app/src/main/res/layout/fc_business.xml
@@ -116,11 +116,13 @@
                                     android:layout_height="match_parent">
                                     
                                     <TextView
+                                        android:id="@+id/tv_user_name"
                                         android:layout_width="wrap_content"
                                         android:text="羊宝宝|管理员"
                                         android:layout_height="wrap_content"/>
 
                                     <TextView
+                                        android:id="@+id/tv_companyname"
                                         android:layout_marginTop="5dp"
                                         android:text="上海国烨跨境电子商务有限公司"
                                         android:layout_width="wrap_content"
