--- a/app/src/main/res/layout/fc_business.xml
+++ b/app/src/main/res/layout/fc_business.xml
@@ -101,7 +101,7 @@
                                     android:id="@+id/imageview"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:src="@mipmap/guide_1"
+                                    android:src="@mipmap/guide01"
                                     android:scaleType="centerCrop"
                                     app:ratio="1"
                                     />
