--- a/app/src/main/res/layout/login_out_dialog_layout.xml
+++ b/app/src/main/res/layout/login_out_dialog_layout.xml
@@ -2,27 +2,33 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/dialog_shadow">
 
     <TextView
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="100"
         android:text="确定登出登录？"
         android:textColor="#000"
         android:textSize="20sp"
+        android:gravity="center_vertical"
         android:layout_marginLeft="20dp"/>
     <Space
         android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="0dp"
+        android:layout_weight="10"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#E6E6E6"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:layout_weight="100"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
         <TextView
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
@@ -32,11 +38,10 @@
             android:layout_height="wrap_content"
             android:text="返回"
             android:textSize="18sp"
-            android:textColor="#000"
+            android:textColor="#529BeA"
             android:gravity="center"/>
         <View
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="1dp"
             android:background="#E6E6E6"
             android:layout_height="match_parent"/>
         <TextView
@@ -48,7 +53,7 @@
             android:layout_height="wrap_content"
             android:text="退出登录"
             android:textSize="18sp"
-            android:textColor="#000"
+            android:textColor="#529BeA"
             android:gravity="center"/>
     </LinearLayout>
 </LinearLayout>
