--- a/app/src/main/res/layout/lrp_popupwindow_layout.xml
+++ b/app/src/main/res/layout/lrp_popupwindow_layout.xml
@@ -3,24 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <Button
+    <TextView
         android:id="@+id/bt_phone"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="客服：13155833297"
+        android:text="客服：400-072-7777"
         android:textSize="24sp"
-        android:background="@drawable/button_bg"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"/>
-    <Button
+        android:textColor="#000"
+        android:background="@drawable/button_bg" />
+    <TextView
+        android:padding="8dp"
         android:id="@+id/bt_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="取消"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        android:textColor="#000"
         android:background="@drawable/button_bg"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:gravity="center"/>
 </LinearLayout>
