商户入驻添加正则判断

--- a/app/src/main/res/layout/lrp_popupwindow_layout.xml
+++ b/app/src/main/res/layout/lrp_popupwindow_layout.xml
@@ -3,15 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/bt_phone"
-        android:padding="10dp"
+    <LinearLayout
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="客服：400-072-7777"
-        android:textSize="24sp"
-        android:textColor="#000"
-        android:background="@drawable/button_bg" />
+        android:orientation="vertical"
+        android:background="@drawable/button_bg" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="客服电话"
+            android:textSize="24sp"
+            android:textColor="#000"
+            android:gravity="center"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#E6E6E6"/>
+        <TextView
+            android:id="@+id/bt_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="400-072-7777"
+            android:textSize="24sp"
+            android:textColor="#000"
+            android:gravity="center"/>
+    </LinearLayout>
     <TextView
         android:padding="8dp"
         android:id="@+id/bt_cancel"
