--- a/app/src/main/res/layout/ships_item.xml
+++ b/app/src/main/res/layout/ships_item.xml
@@ -60,6 +60,7 @@
 
         <!-- 5-->
         <LinearLayout
+            android:paddingBottom="10dp"
             style="@style/ll_interorder">
             <TextView
                 android:text="备注"
