--- a/app/src/main/res/layout/activity_interdetail.xml
+++ b/app/src/main/res/layout/activity_interdetail.xml
@@ -126,6 +126,22 @@
 
                <!-- 7-->
                <LinearLayout
+                   android:visibility="gone"
+                   android:id="@+id/ll_finish_at"
+                   style="@style/ll_interorder">
+
+                   <TextView
+                       style="@style/tv_title_inter"
+                       android:text="完成时间"/>
+
+                   <TextView
+                       android:id="@+id/finish_at"
+                       style="@style/tv_content_inter"
+                       android:text="上海国烨跨境电子商务有限公司"/>
+               </LinearLayout>
+
+               <!-- 8-->
+               <LinearLayout
                    style="@style/ll_interorder">
 
                    <TextView
@@ -137,6 +153,7 @@
                        style="@style/tv_content_inter"
                        android:text="上海国烨跨境电子商务有限公司"/>
                </LinearLayout>
+
 
 
            </LinearLayout>
@@ -290,13 +307,15 @@
 
 
 
-           <!--入库确认单-->
+           <!--入库确认单 在待审核和未通过不显示入库确认单-->
 
            <TextView
+               android:id="@+id/tv_comfig_order"
                android:text="入库确认单"
                style="@style/tv_title_itmes"/>
 
            <LinearLayout
+               android:id="@+id/ll_comfig_order"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_width="match_parent"
@@ -339,8 +358,35 @@
 
                </LinearLayout>
 
-
                <!-- 4-->
+               <LinearLayout
+                   style="@style/ll_interorder">
+                   <TextView
+                       android:text="品名"
+                       style="@style/tv_title_inter"/>
+                   <TextView
+                       android:id="@+id/tv_goods_name"
+                       android:text="hehhe"
+                       style="@style/tv_content_inter"/>
+
+               </LinearLayout>
+
+
+               <!-- 5-->
+               <LinearLayout
+                   style="@style/ll_interorder">
+                   <TextView
+                       android:text="仓库联系方式"
+                       style="@style/tv_title_inter"/>
+                   <TextView
+                       android:id="@+id/contact_num"
+                       android:text="110"
+                       style="@style/tv_content_inter"/>
+
+               </LinearLayout>
+
+
+               <!-- 6-->
                <LinearLayout
                    android:id="@+id/ll_ca_confirm_viewpath"
                    style="@style/ll_interorder">
@@ -358,7 +404,7 @@
                </LinearLayout>
 
 
-               <!-- 5-->
+               <!-- 7-->
                <LinearLayout
                    style="@style/ll_interorder">
                    <TextView
@@ -409,7 +455,7 @@
                 android:id="@+id/tv_refused"
                 android:gravity="center"
                 android:text="拒绝"
-                android:background="@drawable/interstuts_bg"
+                android:background="@drawable/interstuts_blue_bg"
                 android:textSize="16sp"
                 android:textColor="@color/app_color_blue"
                 android:layout_weight="1"
