--- a/app/src/main/res/layout/trantos_item.xml
+++ b/app/src/main/res/layout/trantos_item.xml
@@ -69,6 +69,13 @@
                 android:layout_width="match_parent"
                 android:text="企业名称      上海国烨跨境电子商务有限公司"
                 android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/shop_buy_company_name"
+                android:textSize="14sp"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:text="企业名称      上海国烨跨境电子商务有限公司"
+                android:layout_height="wrap_content"/>
 
 
             <TextView
