--- a/app/src/main/res/layout/login_out_dialog_layout.xml
+++ b/app/src/main/res/layout/login_out_dialog_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="100"
-        android:text="确定登出登录？"
+        android:text="确定退出登录？"
         android:textColor="#000"
         android:textSize="20sp"
         android:gravity="center_vertical"
