--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -166,7 +166,11 @@
         </LinearLayout>
 
 
-
+      <LinearLayout
+          android:id="@+id/ll_is_ca"
+         android:layout_width="match_parent"
+         android:orientation="vertical"
+         android:layout_height="wrap_content">
 
         <TextView
             android:text="上传附件"
@@ -175,9 +179,9 @@
 
         <TextView
            android:padding="16dp"
-            android:textColor="#919191"
+            android:textColor="@color/app_color"
             android:textSize="14sp"
-            android:text="仅支持XX格式的，单个文件不超过XXM"
+            android:text="仅支持png、jpg、jpeg格式的，单个文件不超过20M"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -188,6 +192,8 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:overScrollMode="never" />
+
+</LinearLayout>
 
         </LinearLayout>
 
