--- a/app/src/main/res/layout/activity_editorderdetail.xml
+++ b/app/src/main/res/layout/activity_editorderdetail.xml
@@ -215,6 +215,7 @@
                     android:background="@null"
                     android:hint="请输损耗数量"
                     android:singleLine="true"
+                    android:inputType="numberDecimal"
                     android:maxLength="15"
                     style="@style/tv_editdetail_cotent"/>
 
