--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -173,6 +173,7 @@
          android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_load_nums"
             android:text="上传附件"
             style="@style/tv_title_itmes"/>
 
