--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -59,7 +59,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="储罐性质"
+                        android:text="储罐材质"
                         android:textSize="13sp"
                         android:textColor="#666666"/>
                     <!--<ImageView-->
