--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_bg">
+        android:background="@color/app_color_blue">
         <ImageView
             android:id="@+id/iv_logo"
             android:layout_width="wrap_content"
