--- a/app/src/main/res/layout/activity_editorderdetail.xml
+++ b/app/src/main/res/layout/activity_editorderdetail.xml
@@ -146,6 +146,8 @@
                     android:maxLength="20"
                     android:background="@null"
                     android:hint="请输入单号"
+                    android:inputType="number"
+                    android:digits="@string/filter_vcode"
                     style="@style/tv_editdetail_cotent"/>
 
 
