--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/iv_icon"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@mipmap/launcher"/>
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
@@ -34,7 +34,6 @@
                 android:id="@+id/tv_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="新春贺岁版"
                 android:layout_below="@id/tv_name"
                 android:layout_toRightOf="@id/iv_icon"
                 android:layout_marginLeft="18sp"
@@ -46,7 +45,7 @@
             android:layout_height="wrap_content"
             android:background="#fff"
             android:padding="20dp"
-            android:text="         交割易是由国烨跨境电商平台为仓储服务商打造的一款智能仓储管理平台，协助仓储服务商解决仓储管理难、运营难、操作难的局面，从而达到提高效能、降低成本的根本"/>
+            android:text="        交割易是由国烨跨境电商平台为仓储服务商打造的一款智能仓储管理平台，协助仓储服务商解决仓储管理难、运营难、操作难的局面，从而达到提高效能、降低成本的根本"/>
 
         <RelativeLayout
             android:layout_marginTop="10dp"
