app更新模块编写及储罐性质筛选修改

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -5,4 +5,10 @@
             name="camera_photos"
             path="" />
     </paths>
+
+    <paths>
+        <external-path
+            name="update"
+            path=""/>
+    </paths>
 </resources>
